--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "vue": "^2.6.10",
-    "vue-router": "^3.0.6",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
-    "scss-loader": "0.0.1"
+    "scss-loader": "0.0.1",
+    "vue": "^2.6.10",
+    "vue-lodash": "^2.0.2",
+    "vue-router": "^3.0.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
